--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
 [build]
-  command = "python -m pip install -r requirements.txt && python manage.py collectstatic --noinput"
+  command = "pip install -r requirements.txt && python manage.py collectstatic --noinput"
   publish = "staticfiles"
 
 [build.environment]
   PYTHON_VERSION = "3.9"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
